--- a/style.css
+++ b/style.css
@@ -1,78 +1,111 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
 
 }
 
-body{
-    background-color:#548687;
-    text-align:center;
-  
-  
-}
+body {
+    background-color: #548687;
+    text-align: center;
 
-.container{
-    height:70vh; /*70% of browsers/screen  height*/
-      display:flex;
-     justify-content:center;
-     align-items: center;
-}
-
-.GameBox{
-    height:60vmin; 
-     width:60vmin;
-     display:flex;
-     flex-wrap: wrap;
-     justify-content:center;
-     align-items: center;
-     gap: 1.5vmin;
 
 }
 
-.box{
-    height:18vmin;
-    width:18vmin;
-    border-radius:1rem;  /*1rem=16px*/
-    border:none;
-    box-shadow:0 0 1rem rgba(0,0,0,0.3); /*0.3 is basically shadow thickness*/
-    font-size:8vmin;
-    color:#b0413e;
+.container {
+    height: 70vh;
+    /*70% of browsers/screen  height*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.GameBox {
+    height: 60vmin;
+    width: 60vmin;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5vmin;
+
+}
+
+.box {
+    height: 18vmin;
+    width: 18vmin;
+    border-radius: 1rem;
+    /*1rem=16px*/
+    border: none;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+    /*0.3 is basically shadow thickness*/
+    font-size: 8vmin;
+    color: #b0413e;
     background-color: #ffffc7;
 }
 
-#reset-btn{
-    padding:1rem;
+#reset-btn {
+    padding: 1rem;
     font-size: 1.25rem;
     background-color: #191913;
     color: #fff;
     border-radius: 1rem;
-    border:none;
+    border: none;
+    cursor: pointer;
 }
 
-#new-btn{
-    padding:1rem;
+#new-btn {
+    padding: 1rem;
     font-size: 1.25rem;
     background-color: #191913;
     color: #fff;
     border-radius: 1rem;
-    border:none;
+    border: none;
 }
 
-#msg{
-   color:#ffffc7; 
-   font-size: 5vmin;
+#msg {
+    color: #ffffc7;
+    font-size: 5vmin;
 }
 
-.msg-container{
-height:100vmin;
-display:flex;
-justify-content:center;
-align-items: center;
-flex-direction: column;
-gap:4rem;
+.msg-container {
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
 
 }
 
-  .hide{
-    display:none;
+.hide {
+    display: none;
+}
+
+.scoreboard {
+    height: 10vmin;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+#scoreO {
+
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #0a2913;
+    color: #fff;
+    border-radius: 1rem;
+    border: none;
+}
+
+#scoreX {
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #5c1b29;
+    color: #fff;
+    border-radius: 1rem;
+    border: none;
 }
